# green-bond-tracker-project

./: .branch-info  .gitignore  .pre-commit-config.yaml  .recovery-day-02  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Carbon Footprint Transfer Files/: Carbon_Footprint_of_Bank_Loans.sbx  Carbon_Footprint_of_Bank_Loans.shp.xml  Carbon_Footprint_of_Bank_Loans.shx
Green Bond Issuance Transfer Files/: Green_Bond_Issuance.dbf  Green_Bond_Issuance.sbn  Green_Bond_Issuance.shp  Green_Bond_Issuance.shp.xml
analysis/: 05_select_noaa_station.R  06_download_noaa_weather.R
data/: countries_geo.json  green_bonds.csv
data/processed/: cbi_by_country.csv  cbi_by_sector.csv  cbi_country_sector.csv  cfbl_by_country.csv  cfbl_green_bond_overlap.csv  cfbl_timeseries.csv  green_bonds_by_country.csv  green_bonds_by_country_iso2.csv  green_bonds_regional_aggregates.csv  green_bonds_timeseries.csv  green_bonds_timeseries_iso2.csv  imf_green_bonds_by_country.csv  imf_green_bonds_timeseries.csv  map_data_combined.csv  sensor_data.csv
data/raw/: Green_Bonds.csv  bonds_export.csv
docs/: CONTRIBUTING.md  README.md  ROADMAP.md
docs/analytics/: portfolio_metrics.md
docs/arcgis/: arcgis_integration_plan.md
docs/data/: schema.md
notebooks/: green_bond_demo.ipynb
scripts/: .RData  .Rhistory  01_clean_world_bank_gsss.Rmd  02_add_iso2_codes.Rmd  03_clean_imf_carbon_footprint.Rmd  04_clean_imf_esg_bonds.Rmd  05_clean_cbi_certified_bonds.Rmd  06_combine_for_arcgis.Rmd
src/: __init__.py  arcgis_publisher.py  cli.py  config.py  data_loader.py  interactive.py  logging_config.py  schema.py  validation.py  visuals.py
src/analytics/: __init__.py  metrics.py
tests/: conftest.py  test_analytics.py  test_cli.py  test_cli_config.py  test_config.py  test_data_loader.py  test_logging.py  test_schema.py  test_validation.py  test_visuals.py
tests/fixtures/: test_bonds.csv
